--- a/src/routes/Player/styles.less
+++ b/src/routes/Player/styles.less
@@ -129,6 +129,16 @@ html:not(.active-slider-within) {
             overflow: auto;
         }
 
+        &.enhanced-integration-layer {
+            top: initial;
+            left: initial;
+            right: 4rem;
+            bottom: 12rem;
+            max-width: calc(100% - 4rem);
+            height: auto;
+            overflow: visible;
+        }
+
         &.side-drawer-layer {
             bottom: 0;
             right: 0;
